# dokosa

./: Cargo.toml  README.md
src/: chunker.rs  embedder.rs  git.rs  glob.rs  index.rs  index_file.rs  lib.rs  main.rs  subcommand_add.rs  subcommand_chunk.rs  subcommand_embed.rs  subcommand_index.rs  subcommand_list.rs  subcommand_remove.rs  subcommand_search.rs  subcommand_sync.rs  tokenizer.rs
